--- a/trunk/usip_osp.css
+++ b/trunk/usip_osp.css
@@ -1,4 +1,3 @@
-
 a {color:#1041a1;text-decoration: none}
 a:hover {color:#05266C;}
 a:visited {color:#3c15a1;}
@@ -111,4 +110,7 @@ a:visited.menu_item {
 	font-size: 12pt;
 	color: #FFFFFF;
 	font-style:normal;
+}
+p {
+	font-family: Arial, Helvetica, sans-serif;
 }
